Grace/tests/gibbs/errors/t038.grace
// ERROR = P1002
class {
    print "Meow!"
}
